--- a/principal.css
+++ b/principal.css
@@ -7,13 +7,15 @@
     border-radius: 22px;
 }
 body {
-    background-image: url('fondo.jpg'); 
+    background-image: url(iniciopagina/fondo.jpg);
     background-size: cover; 
     background-position: center; 
     margin: 185px; 
     padding: 0; 
         }
-h1{
+ h1 {
     color: white;
-    text-align: center
-}
+    text-align: center;
+    font-size: 21.7px; /* Ajusta el tamaño de la fuente según sea necesario */
+    letter-spacing: -1.8px; /* Reduce el espaciado entre letras */
+        }
