--- a/principal.css
+++ b/principal.css
@@ -1,17 +1,20 @@
-.img{
-    display: block;
-    margin: 0 auto;
+.img {
     width: 700px;
     height: 300px;
     border: 10px outset brown;
     border-radius: 22px;
+    margin-left: 310px;
+    margin-top: -20px;
+    
 }
+
 body {
     background-image: url(iniciopagina/fondo.jpg);
     background-size: cover; 
     background-position: center; 
-    margin: 185px; 
+    margin: 250px; 
     padding: 0; 
+  
         }
  h1 {
     color: white;
