--- a/tabla.css
+++ b/tabla.css
@@ -23,9 +23,9 @@ table {
   }
   .full-width {
     width: 100%;
-    height: auto;
-  
-  }
+    height: fit-content;
+    vertical-align: middle;
+}
   .celdapistacho{
     background-color: greenyellow;
   }
@@ -63,6 +63,7 @@ table {
   }
   .ocultar{
     border: none; 
+  
   }
   .letra{
     font-family:Arial, Helvetica, sans-serif
