--- a/principal.css
+++ b/principal.css
@@ -19,6 +19,6 @@ body {
  h1 {
     color: white;
     text-align: center;
-    font-size: 21.7px; /* Ajusta el tamaño de la fuente según sea necesario */
-    letter-spacing: -1.8px; /* Reduce el espaciado entre letras */
+    font-size: 21.7px; 
+    letter-spacing: -1.8px; 
         }
